[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/sprites/projectiles/fireV001effect-loop004.png" type="Texture" id=1]
[ext_resource path="res://weapons/Projectile.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/projectiles/fireV001effect-loop001.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/projectiles/fireV001effect-loop005.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/projectiles/fireV001effect-loop003.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/projectiles/fireV001effect-loop009.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/projectiles/fireV001effect-loop008.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/projectiles/fireV001effect-loop006.png" type="Texture" id=8]
[ext_resource path="res://assets/sounds/water_blast_projectile_spell_02.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sprites/projectiles/fireV001effect-loop002.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/projectiles/fireV001effect-loop007.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/projectiles/fireV001effect-loop000.png" type="Texture" id=12]

[sub_resource type="AnimatedTexture" id=2]
frames = 10
fps = 30.0
frame_0/texture = ExtResource( 12 )
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 10 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 5 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 1 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 4 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 8 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 11 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 7 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 6 )
frame_9/delay_sec = 0.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 0.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.089701, 0.275748, 0.428571, 0.657807, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0.742188, 0.276491, 0.0490572, 1, 0.84375, 0.480906, 0.0143923, 1, 0.945312, 0.796623, 0.604677, 1, 1, 1, 1, 0 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 1.78814e-07 )
scale = Vector2( 0.16, 0.16 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5, 0 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -12.296

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 30
lifetime = 0.5
local_coords = false
draw_order = 1
emission_shape = 1
emission_sphere_radius = 2.39
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.87
initial_velocity_random = 1.0
color = Color( 0.854902, 0.490196, 0.0235294, 1 )
color_ramp = SubResource( 3 )

[node name="FreeDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="Sprite" method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="FreeDelay" to="." method="_on_FreeDelay_timeout"]
